--- a/index.html
+++ b/index.html
@@ -3,14 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Input style</title>
-    <link rel="stylesheet" href="task-1/index.html">
-    <link rel="stylesheet" href="task-2/index.html">
-    <link rel="stylesheet" href="task-2/task-2.html" />
-    <link rel="stylesheet" href="task-4/task-4.html" />
-    <link rel="stylesheet" href="task-5/task-5.html" />
-    <link rel="stylesheet" href="task-6/task-6.html" />
-    <link rel="stylesheet" href="projects/project-1/index.html">
+    <title>tasks</title>
     <link rel="apple-touch-icon" sizes="180x180" href="photos/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="photos/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="photos/favicon-16x16.png">
@@ -19,7 +12,7 @@
     <meta name="theme-color" content="#ffffff"> 
 </head>
 <body>
-    <div class="#">
+    <div class="center">
         <nav>
             <a href="task-1/index.html"></a>
             <a href="task-2/index.html"></a>
