task-3 is completed

--- a/task-3/addmission.html
+++ b/task-3/addmission.html
@@ -45,7 +45,7 @@
     </div>
     <div class="content">
     <div class="heading">
-        <h2>Student Addmmission</h2>
+        <h2>Student Addmission</h2>
     </div>
     <div class="form-container">
         <form>    
