--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tasks</title>
-    <!-- <link rel="stylesheet" href="task-1/index.html /">
-    <link rel="stylesheet" href="task-2/index.html /"> -->
+    <link rel="stylesheet" href="task-1/index.html /">
+    <link rel="stylesheet" href="task-2/index.html /">
     <link rel="stylesheet" href="you-care/index.php">
     <link rel="apple-touch-icon" sizes="180x180" href="photos/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="photos/favicon-32x32.png">
@@ -17,8 +17,8 @@
 <body>
     <div class="center">
         <nav>
-            <!-- <a href="task-1/index.html">task-1</a>
-            <a href="task-2/index.html">task-2</a> -->
+            <a href="task-1/index.html">task-1</a>
+            <a href="task-2/index.html">task-2</a>
             <a href="you-care/index.php">YOUCARE</a>
         </nav>
     </div>
